--- a/voice_control_turtlesim/CMakeLists.txt
+++ b/voice_control_turtlesim/CMakeLists.txt
@@ -161,6 +161,8 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
  catkin_install_python(PROGRAMS
+   scripts/my_voice_control_turtlesim.py
+   scripts/my_recognizer.py
    scripts/voice_control_turtlesim.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
