--- a/recognizer_lev_dist/package.xml
+++ b/recognizer_lev_dist/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>voice_control_turtlesim</name>
+  <name>recognizer_lev_dist</name>
   <version>0.0.0</version>
-  <description>The voice_control_TurtleSim package</description>
+  <description>The recognizer_lev_dist package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/voice_control_TurtleSim</url> -->
+  <!-- <url type="website">http://wiki.ros.org/recognizer_lev_dist</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -37,26 +37,24 @@
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
   <!-- Use build_depend for packages you need at compile time: -->
-  <!--<depend>message_generation</depend>-->
+  <!--   <build_depend>message_generation</build_depend> -->
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
   <!--   <build_export_depend>message_generation</build_export_depend> -->
   <!-- Use buildtool_depend for build tool packages: -->
   <!--   <buildtool_depend>catkin</buildtool_depend> -->
   <!-- Use exec_depend for packages you need at runtime: -->
-  <!--<depend>message_runtime</depend>-->
+  <!--   <exec_depend>message_runtime</exec_depend> -->
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
+  <build_depend>std_msgs</build_depend>
   <build_export_depend>rospy</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
+  <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>rospy</exec_depend>
-  <depend>std_msgs</depend>
-  <depend>geometry_msgs</depend>
+  <exec_depend>std_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
